--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,6 +1,6 @@
 <footer class="text-gray-200 bg-black body-font">
     <div class="container px-5 py-8 mx-auto flex items-center sm:flex-row flex-col">
-      <a href="/admin" class="flex title-font font-medium items-center md:justify-start justify-center text-gray-200">
+      <a href="/" class="flex title-font font-medium items-center md:justify-start justify-center text-gray-200">
     
         <span  class="ml-3 text-xl">LoanWisePro</span>
       </a>
